# savant

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cpp/: CMakeLists.txt  CMakePresets.json
cpp/include/savant/: savant.h
cpp/src/: install.cpp  math_ops.cpp
